[gd_scene load_steps=3 format=3 uid="uid://cp1e0435igsc3"]

[ext_resource type="Theme" uid="uid://b52ar5timhs3f" path="res://UI/themes/settings_theme.tres" id="1_qtfn2"]
[ext_resource type="Script" path="res://UI/settings_menu/settings_menu.gd" id="1_x46c7"]

[node name="settings_menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_x46c7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1600.0
offset_bottom = 900.0
color = Color(0.254902, 0.254902, 0.254902, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -251.5
offset_top = 48.0
offset_right = 251.5
offset_bottom = 188.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "- Settings -"

[node name="GridContainer" type="GridContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.5
offset_top = -174.0
offset_right = 500.5
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="resolution" type="Label" parent="ColorRect/GridContainer"]
layout_mode = 2
theme = ExtResource("1_qtfn2")
text = "3D Resolution: "

[node name="resolution_picker" type="OptionButton" parent="ColorRect/GridContainer"]
layout_mode = 2
theme = ExtResource("1_qtfn2")
item_count = 4
popup/item_0/text = "150%"
popup/item_0/id = 0
popup/item_1/text = "100%"
popup/item_1/id = 1
popup/item_2/text = "75%"
popup/item_2/id = 2
popup/item_3/text = "50%"
popup/item_3/id = 3

[node name="window_mode" type="Label" parent="ColorRect/GridContainer"]
layout_mode = 2
theme = ExtResource("1_qtfn2")
text = "Window mode  "

[node name="window_mode_picker" type="OptionButton" parent="ColorRect/GridContainer"]
layout_mode = 2
item_count = 2
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1

[node name="particle_button" type="CheckButton" parent="ColorRect/GridContainer"]
layout_mode = 2
theme = ExtResource("1_qtfn2")
text = "Disable Particles "

[node name="light_button" type="CheckButton" parent="ColorRect/GridContainer"]
layout_mode = 2
theme = ExtResource("1_qtfn2")
action_mode = 0
text = "Disable Lighting "

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.5
offset_top = -120.0
offset_right = 140.5
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_qtfn2")
text = "  Main Menu  "

[connection signal="item_selected" from="ColorRect/GridContainer/resolution_picker" to="." method="_on_resolution_picker_item_selected"]
[connection signal="item_selected" from="ColorRect/GridContainer/window_mode_picker" to="." method="_on_window_mode_picker_item_selected"]
[connection signal="pressed" from="ColorRect/GridContainer/particle_button" to="." method="_on_particle_button_pressed"]
[connection signal="pressed" from="ColorRect/GridContainer/light_button" to="." method="_on_light_button_pressed"]
[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
